--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.github.manouti</groupId>
   <artifactId>jar-timestamp-normalize-maven-plugin</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>0.1</version>
   <packaging>maven-plugin</packaging>
 
   <name>jar-timestamp-normalize-maven-plugin Maven Plugin</name>
