--- a/pom.xml
+++ b/pom.xml
@@ -2,14 +2,33 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.github.manouti</groupId>
+  <groupId>com.manouti</groupId>
   <artifactId>jar-timestamp-normalize-maven-plugin</artifactId>
-  <version>0.1</version>
+  <version>0.1.0</version>
   <packaging>maven-plugin</packaging>
 
   <name>jar-timestamp-normalize-maven-plugin Maven Plugin</name>
-
+  <description>This plugin allows the creation of a "normalized" artifact, that is byte-identical regardless of the time at which it is packaged.</description>
   <url>https://github.com/manouti/jar-timestamp-normalize-maven-plugin</url>
+
+  <licenses>
+    <license>
+      <name>The Apache Software License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+  <developers>
+    <developer>
+      <name>manouti</name>
+    </developer>
+  </developers>
+
+  <scm>
+    <connection>scm:git:https://github.com/manouti/jar-timestamp-normalize-maven-plugin.git</connection>
+    <developerConnection>scm:git:https://github.com/manouti/jar-timestamp-normalize-maven-plugin.git</developerConnection>
+    <url>scm:git:https://github.com/manouti/jar-timestamp-normalize-maven-plugin.git</url>
+  </scm>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
