Update groupId to conform to conventions

--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.manouti</groupId>
+  <groupId>com.github.manouti</groupId>
   <artifactId>jar-timestamp-normalize-maven-plugin</artifactId>
   <version>0.1.0</version>
   <packaging>maven-plugin</packaging>
